--- a/monogame-test/monogame-test.csproj
+++ b/monogame-test/monogame-test.csproj
@@ -15,6 +15,10 @@
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
     <None Remove="Components\" />
+    <None Remove="Content\app.config" />
+    <None Remove="Content\MontserratMedium-nRxlJ.ttf" />
+    <None Remove="Content\File.spritefont" />
+    <None Remove="GameObjectPrefabs\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -26,6 +30,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Components\" />
+    <Folder Include="GameObjectPrefabs\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
