--- a/monogame-test/monogame-test.csproj
+++ b/monogame-test/monogame-test.csproj
@@ -22,8 +22,9 @@
     <None Remove="Content\Textures\tile.png" />
     <None Remove="GameObjectArch\" />
     <None Remove="Content\MediumFont.ttf" />
-    <None Remove="GameObjectPrefabs\Tiles\" />
     <None Remove="GameObjectPrefabs\Parallaxes\" />
+    <None Remove="Maps\" />
+    <None Remove="GameObjectPrefabs\Structures\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -37,8 +38,9 @@
     <Folder Include="Components\" />
     <Folder Include="GameObjectPrefabs\" />
     <Folder Include="GameObjectArch\" />
-    <Folder Include="GameObjectPrefabs\Tiles\" />
     <Folder Include="GameObjectPrefabs\Parallaxes\" />
+    <Folder Include="Maps\" />
+    <Folder Include="GameObjectPrefabs\Structures\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
